Shorten branches causes incorrect code for SKX

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • b127
    • b140
    • x86
    • generic
    • Not verified

      Some cases of CountedLoopEnd have side effect code on targets like SKX for vector processed post loops that are unsafe to translate to short branch versions. A recent change between b126 and b127 exposes this problem. The simple solution is to not allow short branch mapping for these cases. This produces correct code. A patch will be uploaded shortly to exemplify this case. The failures show up in SPECjvm2008 in the scimark metrics after b127 inclusive for SKX targets.

            Assignee:
            Michael Berg (Inactive)
            Reporter:
            Michael Berg (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                Estimated:
                Original Estimate - 1 week
                1w
                Remaining:
                Remaining Estimate - 1 day
                1d
                Logged:
                Time Spent - Not Specified Time Not Required
                Not Specified