8165565: Shorten branches causes incorrect code for SKX

Don't replace restoreMask CountedLoopEnd with short branches.

Reviewed-by: kvn